frontend/src/shared/ui/profile-recipe-card/ProfileRecipeCard.module.css
.card {
  display: flex;
  justify-content: center;
  gap: 10px;
  height: 75px;
}

@media (min-width: 768px) {
  .card {
    gap: 16px;
    height: 100px;
  }
}

.image {
  width: 75px;
  height: 75px;
  border-radius: 15px;
}

@media (min-width: 768px) {
  .image {
    width: 100px;
    height: 100px;
  }
}

.section {
  flex: 1;
  display: flex;
  gap: 16px;
}

.section a {
  text-decoration: none;
  color: inherit;
}

@media (min-width: 768px) {
  .section {
    gap: 32px;
  }
}

.content {
  max-width: 610px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.title {
  font-size: 20px;
  margin: 0;
  font-weight: var(--fd-font-weight-extrabold);
  text-transform: uppercase;
  text-decoration: none;
}

@media (min-width: 768px) {
  .title {
  }
}

.instructions {
  margin: 0;
  font-weight: var(--fd-font-weight-medium);
  color: var(--fd-color-muted);

  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-decoration: none;
}

.btnWrapper {
  display: flex;
  gap: 4px;
  top: 0;
  right: 0;
}

.iconWrapper {
  width: 36px;
  height: 36px;
  flex-shrink: 0;
  border-radius: var(--fd-radius-pill);
  border: 1px solid var(--fd-button-muted-bg);
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: center;

  color: inherit;
  background: transparent;
  cursor: pointer;
}

@media (min-width: 768px) {
  .iconWrapper {
    width: 42px;
    height: 42px;
    padding: 12px;
  }
}

